Added endpoints for trending and populating feed.

--- a/API.ipynb
+++ b/API.ipynb
@@ -4,9 +4,37 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
-    "sorted?"
+    "import this"
    ]
   },
   {
@@ -56,61 +84,6 @@
    ],
    "source": [
     "sorted([[key, val] for (key, val) in d.items()], key=lambda x: x[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import this"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from elasticsearch import Elasticsearch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "es = Elasticsearch(['localhost:9200'])"
    ]
   },
   {
@@ -392,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = requests.get(\"http://13.126.89.176:5000/api/v1/currently-playing?username=mannmann2\")"
+    "t = requests.get(\"http://\"+IP+\":5000/api/v1/currently-playing?username=mannmann2\")"
    ]
   },
   {
@@ -404,33 +377,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
     "from elasticsearch import Elasticsearch\n",
-    "es = Elasticsearch(['http://13.126.89.176:9200/'])"
+    "\n",
+    "IP = '35.154.122.24'\n",
+    "es = Elasticsearch(['http://'+IP+':9200/'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,108 +399,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def refresh(user):\n",
-    "\n",
-    "    data = {\n",
-    "        \"grant_type\": \"refresh_token\",\n",
-    "        \"refresh_token\": user['refresh_token'],\n",
-    "        \"client_id\": 'e6f5f053a682454ca4eb1781064d3881',\n",
-    "        \"client_secret\": \"e4294f2365ec45c0be87671b0da16596\"\n",
-    "        }\n",
-    "\n",
-    "    js = requests.post(\"https://accounts.spotify.com/api/token\", data=data).json()\n",
-    "    print(js)\n",
-    "\n",
-    "    user['access_token'] = js['access_token']\n",
-    "    es.index('users', doc_type='_doc', id=user['id'], body=user)\n",
-    "    # return token"
+    "users = [\n",
+    "    'smarak.poricha',\n",
+    "   'jai747banerjee',\n",
+    "   'gaganberi95',\n",
+    "   'aniformer',\n",
+    "   'cage.reaper420',\n",
+    "   'violentbunnies',\n",
+    "   'ishika_28',\n",
+    "   '312frrepzxigme5nrb2grkzakloy',\n",
+    "   'abhirup_7',\n",
+    "   '21pwkvwsfxjyxeaxluoqrfabi',\n",
+    "   '22i2gwy7nfmm6k7pavah6j2eq',\n",
+    "   'anupamsonal',\n",
+    "   'eh65np1ll63mniz3h51v4jze8',\n",
+    "#     'mannmann2'\n",
+    "        ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_request(url, username):\n",
-    "\n",
-    "    user = es.get('users', doc_type='_doc', id=username)['_source']\n",
-    "    headers = {\"Authorization\": \"Bearer \" + user['access_token']}\n",
-    "    js = requests.get(url, headers=headers).json()\n",
-    "    if 'error' in js:\n",
-    "        if js['error']['message'] == \"The access token expired\":\n",
-    "            refresh(user)\n",
-    "            return make_request(url, username)\n",
-    "        # elif js['error']['message'] == \"Permissions missing\":\n",
-    "        #     return None\n",
-    "    else:\n",
-    "        return js"
+    "for user in users[:]:\n",
+    "    f = []\n",
+    "    for user2 in users:\n",
+    "        if user!= user2:\n",
+    "            f.append(user2)\n",
+    "    es.index('friends', '_doc', {'friends':f}, user)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_all_following(username):\n",
-    "    url = \"https://api.spotify.com/v1/me/following?type=artist&limit=50\" #&after=\" + params['after']\n",
-    "    js = make_request(url, username)\n",
-    "    print('.', end='')\n",
-    "\n",
-    "    ids = []\n",
-    "    while True:\n",
-    "        for item in js['artists']['items']:\n",
-    "            es.index('artist', doc_type='_doc', id=item['id'], body=item)\n",
-    "            ids.append(item['id'])\n",
-    "\n",
-    "        if js['artists']['next']:\n",
-    "            js = make_request(js['artists']['next'], username)\n",
-    "        else:\n",
-    "            break\n",
-    "\n",
-    "    es.index('following', doc_type='_doc', id=username, body={'ids':ids})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "312frrepzxigme5nrb2grkzakloy\n",
-      ".eh65np1ll63mniz3h51v4jze8\n",
-      "{'access_token': 'BQDJWEGWJpN2w-GNNrw7cMp31ruSafTs14dgbIQrjycNeUP6FAvRFs1X_cUttQMooNjRY7V5NE-7Wboj2K1xcm0poKMp2UnTAC_qNPZCiVYpj8URMdXklIGHUXGgz-nUMMpL1fJauCwdbc0HuiKyCbC8VMq4iF0yX4Cy72wTEhLBGr5Au1qysHCMTN6_wEz3opsS6cgi196dGlP7x3S3ZCzRN7MGKMvjhXK9vYXxbGeM7drJcYFS1ddI8be_fbzjL4Y', 'token_type': 'Bearer', 'expires_in': 3600, 'scope': 'streaming user-modify-playback-state user-library-read user-follow-read playlist-modify-private playlist-modify-public user-read-playback-state user-read-currently-playing user-read-email user-read-recently-played user-top-read'}\n",
-      ".abhirup_7\n",
-      ".21pwkvwsfxjyxeaxluoqrfabi\n",
-      ".22i2gwy7nfmm6k7pavah6j2eq\n",
-      ".anupamsonal\n",
-      "."
-     ]
+     "data": {
+      "text/plain": [
+       "{'_id': 'mannmann2',\n",
+       " '_index': 'friends',\n",
+       " '_primary_term': 1,\n",
+       " '_seq_no': 8,\n",
+       " '_shards': {'failed': 0, 'successful': 1, 'total': 2},\n",
+       " '_type': '_doc',\n",
+       " '_version': 3,\n",
+       " 'result': 'updated'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for user in users[8:]:\n",
-    "    print(user['display_name'])\n",
-    "    get_all_following(user['_id'])\n",
-    "    \n",
-    "#     f = []\n",
-    "#     for user2 in users:\n",
-    "#         if user['_id']!= user2['_id']:\n",
-    "#             f.append(user2['_id'])\n",
-    "#     es.index('friends', '_doc', {'friends':f}, user['_id'])"
+    "es.index('friends', '_doc', {'friends':users}, 'mannmann2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -570,7 +494,7 @@
        " 'found': True}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,6 +523,15 @@
    ],
    "source": [
     "es.indices.create(\"messages\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for user in "
    ]
   },
   {
@@ -687,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,109 +641,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "Q = {\n",
-    "    \"query\" : {\n",
-    "        \"constant_score\" : {\n",
-    "            \"filter\" : {\n",
-    "                \"match\" : { \"played_by\" : q1 }\n",
-    "            }\n",
+    "    \"query\": {\n",
+    "        \"bool\": {\n",
+    "            \"must\": {\n",
+    "                \"range\": {\n",
+    "                    \"played_at\": {\"gte\": \"now-7d/d\", \"lte\": \"now/d\"}\n",
+    "                }\n",
+    "            },\n",
+    "            \"filter\": {\"match\": {\"played_by\": \"mannmann2\"}}\n",
     "        }\n",
     "    },\n",
-    "    \"aggs\" : {\n",
-    "        \"artists\" : { \"terms\" : { \"field\" : \"track.artists.name\" } }\n",
-    "    },\n",
+    "    \"size\": 0,\n",
+    "    \"aggs\": {\n",
+    "        \"artists\": {\"terms\": {\"field\": \"track.artists.name.keyword\",\n",
+    "                              \"size\": 42}},\n",
+    "    }\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Q = {\n",
-    "        \"query\" : {\n",
-    "        \"constant_score\" : {\n",
-    "            \"filter\" : {\n",
-    "                \"match\" : { \"played_by\" : \"mannmann2\" }\n",
-    "            }\n",
-    "        }\n",
-    "    },\n",
-    "    \"aggs\" : {\n",
-    "        \"artists\" : { \"terms\" : { \"field\" : \"track.artists.name.keyword\",\n",
-    "                                \"size\":42} },\n",
-    "    },\n",
-    "    \"size\":0\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_shards': {'failed': 0, 'skipped': 0, 'successful': 2, 'total': 2},\n",
-       " 'aggregations': {'artists': {'buckets': [{'doc_count': 28,\n",
-       "     'key': 'Ramin Djawadi'},\n",
-       "    {'doc_count': 13, 'key': 'LCD Soundsystem'},\n",
-       "    {'doc_count': 10, 'key': 'Metric'},\n",
-       "    {'doc_count': 10, 'key': 'Pond'},\n",
-       "    {'doc_count': 3, 'key': 'Mahavishnu Orchestra'},\n",
-       "    {'doc_count': 3, 'key': 'Maybird'},\n",
-       "    {'doc_count': 2, 'key': 'Cage The Elephant'},\n",
-       "    {'doc_count': 2, 'key': 'Vampire Weekend'},\n",
-       "    {'doc_count': 1, 'key': 'Dr. Dog'},\n",
-       "    {'doc_count': 1, 'key': 'Drugdealer'},\n",
-       "    {'doc_count': 1, 'key': 'Grizzly Bear'},\n",
-       "    {'doc_count': 1, 'key': 'John McLaughlin'},\n",
-       "    {'doc_count': 1, 'key': 'Mild High Club'},\n",
-       "    {'doc_count': 1, 'key': 'Plini'},\n",
-       "    {'doc_count': 1, 'key': 'Sheer Agony'},\n",
-       "    {'doc_count': 1, 'key': 'Steve Lacy'},\n",
-       "    {'doc_count': 1, 'key': 'Tame Impala'},\n",
-       "    {'doc_count': 1, 'key': 'The National'},\n",
-       "    {'doc_count': 1, 'key': 'Unknown Mortal Orchestra'}],\n",
-       "   'doc_count_error_upper_bound': 0,\n",
-       "   'sum_other_doc_count': 0}},\n",
-       " 'hits': {'hits': [], 'max_score': 0.0, 'total': 79},\n",
-       " 'timed_out': False,\n",
-       " 'took': 17}"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "es.search(\"recent\", body=Q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q1 = ' OR '.join(f for f in abc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "es.search?"
    ]
   },
   {
